<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="24sp"
        android:text="Header"
        android:visibility="gone"/>

    <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditListItemActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="8dp"
        android:text="@string/event_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/mySubItemTextBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="88dp"
        android:text="Venue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/myCancelButton"
        app:layout_constraintEnd_toStartOf="@+id/mySubItemTextBox1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="10dp"
        android:text="@string/location"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/mySubItemTextBox1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="230dp"
        android:text="@string/movie_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start_date"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="8dp"
        android:text="@string/end_date"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/myCancelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="8dp"
        android:text="@string/attendees"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/myCancelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/mySubItemTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <EditText
        android:id="@+id/mySubItemTextBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="210dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/myOkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mySubItemTextBox"
        app:layout_constraintTop_toBottomOf="@+id/mySubItemTextBox2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/mySubItemTextBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="280dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mySubItemTextBox1" />

    <EditText
        android:id="@+id/mySubItemTextBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/mySubItemTextBox4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mySubItemTextBox2"
        app:layout_constraintTop_toBottomOf="@+id/mySubItemTextBox2" />

    <EditText
        android:id="@+id/mySubItemTextBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="290dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mySubItemTextBox3" />
    <EditText
        android:id="@+id/mySubItemTextBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="290dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mySubItemTextBox4" />

    <EditText
        android:id="@+id/mySubItemTextBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="290dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mySubItemTextBox5"
        app:layout_constraintTop_toBottomOf="@+id/mySubItemTextBox4" />

    <Button
        android:id="@+id/myOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="243dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="262dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mySubItemTextBox"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mySubItemTextBox"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/myCancelButton"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="243dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="220dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toTopOf="@+id/mySubItemTextBox1"
        app:layout_constraintEnd_toStartOf="@+id/myOkButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/mySubItemTextBox"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/AddMovie"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="500dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="300dp"
        android:text="@string/addmovie"
        app:layout_constraintBottom_toTopOf="@+id/mySubItemTextBox1"
        app:layout_constraintEnd_toStartOf="@+id/myOkButton"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/mySubItemTextBox3"
        app:layout_constraintVertical_bias="0.0" />



    <Button
        android:id="@+id/starttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="400dp"
        android:layout_marginEnd="100dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/starttime"
        app:layout_constraintEnd_toStartOf="@+id/startdate"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startdate"
        android:onClick="showDatePickerDialog"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="400dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"
        android:onClick="showEndTimePickerDialog"
        android:text="@string/endtime"
        app:layout_constraintBottom_toTopOf="@+id/mySubItemTextBox"
        app:layout_constraintEnd_toStartOf="@+id/startdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/enddate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="showEndDatePickerDialog"
        android:text="@string/enddate"
        app:layout_constraintEnd_toStartOf="@+id/starttime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>

</LinearLayout>