<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtEventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_title"/>

        <EditText
            android:id="@+id/eventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/txtStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date" />

        <EditText
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/txtEventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"/>

        <EditText
            android:id="@+id/eventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
        <TextView
            android:id="@+id/txtEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"/>
        <EditText
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/txtVenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venue"/>

        <EditText
            android:id="@+id/venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"/>

        <EditText
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/txtAttendees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendees"/>

        <EditText
            android:id="@+id/attendees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginStart="140dp"
            android:layout_marginBottom="328dp"
            android:text="Save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>